@@ -1,57 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE TS>
-<TS version="2.1" language="it">
+<TS version="2.1" language="oc">
 <context>
     <name>PasswordDialog</name>
     <message>
         <location filename="../passworddialog.ui" line="6"/>
         <source>LXQt sudo</source>
-        <translation>LXQt sudo</translation>
+        <translation>sudo de LXQt</translation>
     </message>
     <message>
         <location filename="../passworddialog.ui" line="42"/>
         <source>Copy command to clipboard</source>
-        <translation>Copia comando negli appunti</translation>
+        <translation>Copiar la comanda al quichapapièrs</translation>
     </message>
     <message>
         <location filename="../passworddialog.ui" line="45"/>
         <source>&amp;Copy</source>
-        <translation>&amp;Copia</translation>
+        <translation>&amp;Copiar</translation>
     </message>
     <message>
         <location filename="../passworddialog.ui" line="83"/>
         <source>The requested action needs administrative privileges.&lt;br&gt;Please enter your password.</source>
-        <translation>Le azioni richieste richiedono i privilegi di amministratore.&lt;br&gt; Per favore inserisci la tua password.</translation>
+        <translation>L’accion demandada requerís los privilègis administratius.&lt;br&gt;Picatz lo senhal.</translation>
     </message>
     <message>
         <location filename="../passworddialog.ui" line="106"/>
         <source>LXQt sudo backend</source>
-        <translation>Backend sudo LXQt</translation>
+        <translation type="unfinished"></translation>
     </message>
     <message>
         <location filename="../passworddialog.ui" line="109"/>
         <source>A program LXQt sudo calls in background to elevate privileges.</source>
-        <translation type="unfinished">Chiamata in background da un programma LXQt sudo per elevare i privilegi.</translation>
+        <translation type="unfinished"></translation>
     </message>
     <message>
         <location filename="../passworddialog.ui" line="119"/>
         <source>Command:</source>
-        <translation>Comando:</translation>
+        <translation>Comanda&#xa0;:</translation>
     </message>
     <message>
         <location filename="../passworddialog.ui" line="126"/>
         <source>Password:</source>
-        <translation>Password:</translation>
+        <translation>Senhal&#xa0;:</translation>
     </message>
     <message>
         <location filename="../passworddialog.ui" line="133"/>
         <source>Enter password</source>
-        <translation>Inserisci la password</translation>
+        <translation>Picar lo senhal</translation>
     </message>
     <message>
         <location filename="../passworddialog.cpp" line="60"/>
         <source>Attempt #%1</source>
-        <translation>Tentativo #%1</translation>
+        <translation>Ensag #%1</translation>
     </message>
 </context>
 <context>
@@ -72,26 +72,13 @@ Arguments:
   arguments        Optional arguments for command.
 
 </source>
-        <translation>Uso: %1 opzione [comando [argomenti...]]
-
-Frontend grafico per  %2/%3
-
-Argomenti:
-··opzioni:
-··· -h|--help     Mostra questo aiuto.
-····-v|--version   Mostra versione.
-····-s|--su        Usa %3(1) come backend.
-····-d|--sudo      Usa %2(8) come backend.
-··command          Comando da eseguire.
-··arguments        Argomenti opzionali per il comando.
-
-</translation>
+        <translation type="unfinished"></translation>
     </message>
     <message>
         <location filename="../sudo.cpp" line="92"/>
         <source>%1 version %2
 </source>
-        <translation>%1 versione %2
+        <translation>%1 version %2
 </translation>
     </message>
 </context>
@@ -100,53 +87,51 @@ Argomenti:
     <message>
         <location filename="../sudo.cpp" line="195"/>
         <source>%1: no command to run provided!</source>
-        <translation>%1: non è stato fornito alcun comando da eseguire!</translation>
+        <translation type="unfinished"></translation>
     </message>
     <message>
         <location filename="../sudo.cpp" line="202"/>
         <source>%1: no backend chosen!</source>
-        <translation>%1: selezionato nessun backend!</translation>
+        <translation type="unfinished"></translation>
     </message>
     <message>
         <location filename="../sudo.cpp" line="219"/>
         <source>Syscall error, failed to fork: %1</source>
-        <translation>Errore Syscall, fork fallito: %1</translation>
+        <translation type="unfinished"></translation>
     </message>
     <message>
         <location filename="../sudo.cpp" line="246"/>
         <source>unset</source>
         <extracomment>shouldn&apos;t be actually used but keep as short as possible in translations just in case.</extracomment>
-        <translation>non settato</translation>
+        <translation>pas definit</translation>
     </message>
     <message>
         <location filename="../sudo.cpp" line="295"/>
         <source>%1: Detected attempt to inject privileged command via LC_ALL env(%2). Exiting!
 </source>
-        <translation>%1: Rilevato tentativo di immissione comando privilegiato via LC_ALL env(%2). Uscita!
-</translation>
+        <translation type="unfinished"></translation>
     </message>
     <message>
         <location filename="../sudo.cpp" line="337"/>
         <source>Syscall error, failed to bring pty to non-block mode: %1</source>
-        <translation>Errore syscall, fallimento nel portare pty alla modalità non-block: %1</translation>
+        <translation type="unfinished"></translation>
     </message>
     <message>
         <location filename="../sudo.cpp" line="345"/>
         <source>Syscall error, failed to fdopen pty: %1</source>
-        <translation>Errore syscall, errore durante fdopen pty: %1</translation>
+        <translation type="unfinished"></translation>
     </message>
     <message>
         <location filename="../sudo.cpp" line="314"/>
         <source>%1: Failed to exec &apos;%2&apos;: %3
 </source>
-        <translation>%1: Esecuzione di &apos;%2&apos; fallita: %3
-</translation>
+        <translation type="unfinished"></translation>
     </message>
     <message>
         <location filename="../sudo.cpp" line="376"/>
         <source>Child &apos;%1&apos; process failed!
 %2</source>
-        <translation>Processo figlio %1 non riuscito!
+        <translation>Fracàs del processús filh «&#xa0;%1&#xa0;»&#xa0;!
 %2</translation>
     </message>
 </context>
