@@ -1,5 +1,6 @@
 0.3.3 (dev)
   BugFix: openFile always left a running file manager even after program close.
+  Synced octopkg-doas with LXQt-sudo 1.3.0 version.
 
 0.3.2 (2022/12/31)
   BugFix: WM testing code now uses ps -aux. 
